--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AstraApp",
-  "name": "Astra Preschool Fee App",
+  "short_name": "Astra",
+  "name": "Astra Preschool App",
   "icons": [
     {
       "src": "favicon.ico",
